syntax = "proto3";
package calculator;
option go_package="./calculatorpb";
service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse);
    rpc Multi (MultiRequest) returns (MultiResponse);
}
message SumRequest {
    int32 number1 =1;
    int32 number2=2;
}
message SumResponse {
    int32 result =1;
}
message MultiRequest {
    int64 number1=1;
    int64 number2=2;
}
message MultiResponse {
    int64 result =1;
}